# GitHubActionThing

./: .gitlab-ci.yml  CHANGELOG.rst  Makefile  README.rst  mypy.ini  setup.cfg  tox.ini
.github/workflows/: main.yaml
src/githubactionthing/: __init__.py  _meta.py
test/: test_unit.py
