#


[check]
metadata = 1
strict = 1


[metadata]
author = sinoroc
author_email = sinoroc.code+python@gmail.com
description = GitHubActionThing library
license = Apache-2.0
license_files =
    LICENSE.txt
long_description = file: README.rst
long_description_content_type = text/x-rst
name = GitHubActionThing
project_urls =
    GitHub = https://github.com/sinoroc/GitHubActionThing
    GitLab = https://gitlab.com/sinoroc/GitHubActionThing
url = https://pypi.org/project/GitHubActionThing/


[options]
install_requires =
    # ...
package_dir =
    = src
packages = find:
python_requires = >=3.8


[options.extras_require]
dev-package =
    build
    twine
dev-test =
    mypy
    pycodestyle
    pydocstyle
    pylint
    pytest
    pytest-mypy
    pytest-pycodestyle
    pytest-pydocstyle
    pytest-pylint
    pytest-yapf3
    yapf


[options.packages.find]
where = src


# EOF
